# corkboard

./: .gitignore  README.md  dashboard.html  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
.mex/: AGENTS.md  ROUTER.md  config.json
.mex/context/: architecture.md  conventions.md  decisions.md  hardware.md  protocol.md  setup.md  stack.md
.mex/events/: decisions.jsonl
.mex/patterns/: INDEX.md  add-page-component.md  deploy-to-orange-pi.md  device-api.md
device/: Cargo.toml
device/src/: api.rs  calendar.rs  config.rs  dashboard.html  display.rs  document.rs  fonts.rs  logbuf.rs  main.rs  panel.rs  preview.html  render.rs  sample.rs  state.rs  status.rs  storage.rs  sysstat.rs  text.rs
docs/plans/: 2026-06-27-editor-surgery-1a-foundation.md
docs/specs/: 2026-06-23-web-ui-editor-design.md  2026-06-27-device-server-design.md  2026-06-28-contextual-tool-options-bar-design.md
public/fonts/: manifest.json
scripts/: deploy-to-pi.sh
src/: App.test.ts  App.vue  DashboardApp.test.ts  DashboardApp.vue  dashboard-main.ts  main.ts  smoke.test.ts  style.css  test-setup.ts
src/components/: EditorCanvas.test.ts  EditorCanvas.vue  MovableElement.vue  PageSidebar.test.ts  PageSidebar.vue  PageThumbnail.test.ts  PageThumbnail.vue  Timeline.test.ts  Timeline.vue  TimelineItem.vue  ToolOptionsBar.test.ts  ToolOptionsBar.vue  ToolRail.test.ts  ToolRail.vue  TopBar.test.ts  TopBar.vue
src/composables/: useDeviceStatus.ts  useDraggableResizable.test.ts  useDraggableResizable.ts
src/lib/: dashboardFormat.ts  dashboardTypes.ts  deviceApi.test.ts  deviceApi.ts  fonts.test.ts  fonts.ts  freehand.test.ts  freehand.ts  imageTool.test.ts  imageTool.ts  sampleCalendar.test.ts  sampleCalendar.ts  textFit.ts  (+1 more)
(+47 files in other folders)
