[package]
name = "corkboard-device"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "corkboard-device"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
anyhow = "1"
thiserror = "2"
tiny-skia = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
chrono = "0.4"
freetype-rs = { version = "0.38.0", features = ["bundled"] }

# Linux-only: the SPI/GPIO panel driver. Kept out of the default
# [dependencies] so `cargo build`/`cargo test` keep working on a dev Mac,
# which never compiles `src/panel.rs` (see its `#[cfg(target_os = "linux")]`).
[target.'cfg(target_os = "linux")'.dependencies]
spidev = "0.7"
gpio-cdev = "0.6"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
http-body-util = "0.1"
